force-app/main/default/objects/Player__c/fields/CurrentProperty__c.field-meta.xml
<CustomField>
    <fullName>CurrentProperty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What the Player is standing on.</description>
    <inlineHelpText>What the Player is standing on.</inlineHelpText>
    <label>Current Property</label>
    <referenceTo>GameProperty__c</referenceTo>
    <relationshipLabel>PlayerCurrentProperties</relationshipLabel>
    <relationshipName>Players</relationshipName>
    <type>Lookup</type>
</CustomField>