force-app/main/default/objects/Player__c/fields/IsInJail__c.field-meta.xml
<CustomField>
    <fullName>IsInJail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Jail?</label>
    <type>Checkbox</type>
</CustomField>