force-app/main/default/objects/Player__c/fields/Money__c.field-meta.xml
<CustomField>
    <fullName>Money__c</fullName>
    <label>Money</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>