force-app/main/default/objects/Player__c/fields/Piece__c.field-meta.xml
<CustomField>
    <fullName>Piece__c</fullName>
    <label>Piece</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battleship</fullName>
            </value>
            <value>
                <fullName>Boot</fullName>
            </value>
            <value>
                <fullName>Cannon</fullName>
            </value>
            <value>
                <fullName>Thimble</fullName>
            </value>
            <value>
                <fullName>Top Hat</fullName>
            </value>
            <value>
                <fullName>Iron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>