force-app/main/default/objects/Player__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order in which Players roll the dice.</description>
    <inlineHelpText>Order in which Players roll the dice.</inlineHelpText>
    <label>Sequence</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>